--- a/style/_variable.scss
+++ b/style/_variable.scss
@@ -1,5 +1,5 @@
-@import "bootstrap-icons/font/bootstrap-icons.css";
 @import "color";
 @import "typography";
-@import "spacing";
+@import "spacing";  
 @import "radius";
+@import "grid";
