--- a/style/all.css
+++ b/style/all.css
@@ -52,6 +52,14 @@ table {
   border-spacing: 0;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
 .container {
   width: 100%;
   max-width: 1296px;
@@ -66,8 +74,22 @@ table {
   gap: 24px;
 }
 
+html, body {
+  height: 100%;
+}
+
+.layout {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
 /* mobile */
-@media (max-width: 375px) {
+@media (max-width: 376px) {
   .container {
     padding-left: 12px;
     padding-right: 12px;
@@ -80,18 +102,16 @@ table {
   height: 80px;
   width: 100%;
   max-width: 1920px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
-  padding-top: 16px;
-  padding-bottom: 16px;
 }
 .navbar a {
   cursor: default;
-  transition: color 1s ease;
+  transition: color 0.8s ease;
 }
 .navbar-menu {
   display: flex;
@@ -143,4 +163,134 @@ table {
 }
 .navbar-user:hover {
   color: #57A203;
+}
+
+@media (max-width: 376px) {
+  .navbar {
+    width: 100%;
+    height: 120px;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+  }
+  .navbar-menu {
+    display: contents;
+  }
+  .navbar-logo {
+    order: 1;
+    padding: 12px;
+  }
+  .navbar-bt-wrapper {
+    order: 2;
+    padding: 12px;
+  }
+  .navbar-list {
+    order: 3;
+    width: 100%;
+    height: 48px;
+    gap: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    color: #212529;
+    font-family: "Noto Sans TC", sans-serif;
+    line-height: 1.5;
+    letter-spacing: 5%;
+    font-size: 16px;
+  }
+  .navbar-list a {
+    flex: 1;
+    display: flex;
+    height: 48px;
+    align-items: center;
+    justify-content: center;
+  }
+  .navbar-list a:first-child {
+    background-color: #E8FEC5;
+  }
+  .navbar-list a:last-child {
+    background-color: #F5FEE7;
+  }
+}
+.footer {
+  width: 100%;
+  max-width: 1920px;
+  height: 278px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  background-color: #F8F9FA;
+}
+.footer-logo-link {
+  width: 100%;
+  max-width: 1296px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-logo-link a {
+  cursor: default;
+  transition: color 0.8s ease;
+}
+.footer-logo-link .footer-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 174px;
+  height: 48px;
+  gap: 40px;
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 5%;
+  font-size: 16px;
+  font-weight: 500;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.footer-logo-link .footer-list a {
+  color: #212529;
+  text-decoration: none;
+}
+.footer-logo-link .footer-list a:hover {
+  color: #6C757D;
+}
+.footer-copyright {
+  width: 100%;
+  max-width: 1296px;
+  padding-top: 32px;
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 5%;
+  font-size: 14px;
+  font-weight: 400;
+  color: #6C757D;
+  text-align: center;
+  border-top: 1px solid #DEE2E6;
+}
+
+@media (max-width: 376px) {
+  .footer {
+    height: 320px;
+    gap: 24px;
+  }
+  .footer-logo-link {
+    max-width: 351px;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .footer-logo-link img {
+    margin-bottom: 8px;
+  }
+  .footer-logo-link .footer-list {
+    max-width: 327px;
+    width: 100%;
+    max-height: 154px;
+    height: auto;
+    padding-left: 12px;
+    padding-right: 12px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }/*# sourceMappingURL=all.css.map */
