--- a/style/all.css
+++ b/style/all.css
@@ -293,4 +293,24 @@ main {
     flex-direction: column;
     align-items: flex-start;
   }
+}
+.bt-p-tx {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 5%;
+  font-size: 16px;
+  padding: 12px 24px;
+  background-color: #212529;
+  color: #FFF;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500;
+  cursor: default;
+  transition: background-color 0.8s ease, color 0.8s ease;
+}
+.bt-p-tx:hover {
+  background-color: #495057;
+}
+.bt-p-tx:focus {
+  box-shadow: 0 0 0 3px rgba(33, 37, 41, 0.1);
 }/*# sourceMappingURL=all.css.map */
