--- a/style/_grid.scss
+++ b/style/_grid.scss
@@ -12,6 +12,13 @@
   gap: 24px;
 }
 
+.col-12 { grid-column: span 12; }
+.col-6  { grid-column: span 6; }
+.col-4  { grid-column: span 4; }
+.col-3  { grid-column: span 3; }
+.col-2  { grid-column: span 2; }
+
+
 html, body {
   height: 100%;
 }
@@ -34,6 +41,7 @@ main {
   }
 
   .row {
+    grid-template-columns: repeat(4, 1fr);
     gap: 16px;
   }
 }
