--- a/style/all.css
+++ b/style/all.css
@@ -74,6 +74,26 @@ body {
   gap: 24px;
 }
 
+.col-12 {
+  grid-column: span 12;
+}
+
+.col-6 {
+  grid-column: span 6;
+}
+
+.col-4 {
+  grid-column: span 4;
+}
+
+.col-3 {
+  grid-column: span 3;
+}
+
+.col-2 {
+  grid-column: span 2;
+}
+
 html, body {
   height: 100%;
 }
@@ -95,6 +115,7 @@ main {
     padding-right: 12px;
   }
   .row {
+    grid-template-columns: repeat(4, 1fr);
     gap: 16px;
   }
 }
@@ -300,6 +321,27 @@ main {
   letter-spacing: 5%;
   font-size: 16px;
   padding: 12px 24px;
+  background-color: #C0FA73;
+  color: #212529;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500;
+  cursor: default;
+  transition: background-color 0.8s ease, color 0.8s ease;
+}
+.bt-p-tx:hover {
+  color: #477A11;
+}
+.bt-p-tx:focus {
+  box-shadow: 0 0 0 3px rgba(192, 250, 115, 0.4);
+}
+
+.bt-n-tx {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 5%;
+  font-size: 16px;
+  padding: 12px 24px;
   background-color: #212529;
   color: #FFF;
   border: none;
@@ -308,9 +350,51 @@ main {
   cursor: default;
   transition: background-color 0.8s ease, color 0.8s ease;
 }
-.bt-p-tx:hover {
+.bt-n-tx:hover {
   background-color: #495057;
 }
-.bt-p-tx:focus {
+.bt-n-tx:focus {
   box-shadow: 0 0 0 3px rgba(33, 37, 41, 0.1);
+}
+
+.hero {
+  position: relative;
+}
+.hero img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.hero .hero-content {
+  max-width: 586px;
+  position: absolute;
+  inset: 0;
+  margin-left: 200px;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.hero .hero-content h1 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 64px;
+  font-weight: 700;
+  font-style: bold;
+  color: #FFF;
+}
+.hero .hero-content h3 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 28px;
+  font-weight: 700;
+  font-style: bold;
+  color: #FFF;
+}
+.hero .hero-content .bt-p-tx {
+  margin-top: 40px;
 }/*# sourceMappingURL=all.css.map */
