--- a/style/_index.scss
+++ b/style/_index.scss
@@ -21,14 +21,12 @@
         & h1{
             @include text-display1;
             font-weight: 700;
-            font-style: bold;
             color: #FFF;
         }
 
         & h3{
             @include text-tw-h3;
             font-weight: 700;
-            font-style: bold;
             color: #FFF;
         }
         & .bt-p-tx{
@@ -42,7 +40,7 @@
     padding-bottom: $spacing-5xl;
     gap: 10px;
 
-    & .section-title{
+    .section-title{
         @include text-tw-h4;
         font-weight: 700;
         margin-bottom: $spacing-2xl;
