--- a/style/_card.scss
+++ b/style/_card.scss
@@ -1,11 +1,12 @@
 @mixin card-product-l{
-    width: 636px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: $spacing-s;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 636px;
         height: auto;
         display: block;
     }
@@ -28,13 +29,14 @@
 }
 
 @mixin card-product-m{
-    width: 343px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: $spacing-s;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 343px;
         height: auto;
         display: block;
     }
@@ -57,13 +59,14 @@
 }
 
 @mixin card-product-s{
-    width: 170px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: $spacing-xs;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 170px;
         height: auto;
         display: block;
     }
@@ -97,18 +100,19 @@
     @include card-product-s;
 }
 
+
+
 @mixin card-img-l{
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 422px;
-    height: 422px;
-    border: 1px solid #F1F3F7;
+    width: 100%;
     background: $color-n-4;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 422px;
         height: auto;
         display: block;
     }
@@ -132,13 +136,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 300px;
-    height: 300px;
-    border: 1px solid #F1F3F7;
+    width: 100%;
     background: $color-n-4;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 300px;
         height: auto;
         display: block;
     }
@@ -170,12 +173,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 422px;
-    height: 422px;
+    width: 100%;
     background: $color-n-2;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 422px;
         height: auto;
         display: block;
     }
@@ -216,12 +219,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 164px;
-    height: 164px;
+    width: 100%;
     background: $color-n-2;
     img {
         transition: opacity 0.3s ease;
         width: 100%;
+        max-width: 164px;
         height: auto;
         display: block;
     }
