--- a/style/all.css
+++ b/style/all.css
@@ -120,7 +120,7 @@ main {
   }
 }
 .card-product-l {
-  width: 636px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -128,6 +128,7 @@ main {
 .card-product-l img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 636px;
   height: auto;
   display: block;
 }
@@ -155,7 +156,7 @@ main {
 }
 
 .card-product-m {
-  width: 343px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -163,6 +164,7 @@ main {
 .card-product-m img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 343px;
   height: auto;
   display: block;
 }
@@ -190,7 +192,7 @@ main {
 }
 
 .card-product-s {
-  width: 170px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -198,6 +200,7 @@ main {
 .card-product-s img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 170px;
   height: auto;
   display: block;
 }
@@ -229,14 +232,13 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 422px;
-  height: 422px;
-  border: 1px solid #F1F3F7;
+  width: 100%;
   background: #CED4DA;
 }
 .card-img-l img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 422px;
   height: auto;
   display: block;
 }
@@ -262,14 +264,13 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 300px;
-  height: 300px;
-  border: 1px solid #F1F3F7;
+  width: 100%;
   background: #CED4DA;
 }
 .card-img-s img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 300px;
   height: auto;
   display: block;
 }
@@ -295,13 +296,13 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 422px;
-  height: 422px;
+  width: 100%;
   background: #E9ECEF;
 }
 .card-category-l img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 422px;
   height: auto;
   display: block;
 }
@@ -346,13 +347,13 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 164px;
-  height: 164px;
+  width: 100%;
   background: #E9ECEF;
 }
 .card-category-s img {
   transition: opacity 0.3s ease;
   width: 100%;
+  max-width: 164px;
   height: auto;
   display: block;
 }
@@ -671,15 +672,57 @@ main {
 }
 
 .new-arrival {
+  display: flex;
   padding-top: 64px;
   padding-bottom: 64px;
-  gap: 10px;
 }
-.new-arrival .section-title {
+.new-arrival .container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.new-arrival header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+}
+.new-arrival header .title {
   font-family: "Noto Sans TC", sans-serif;
   line-height: 1.2;
   letter-spacing: 5%;
-  font-size: 24px;
+  font-size: 48px;
   font-weight: 700;
-  margin-bottom: 40px;
+  color: #212529;
+}
+.new-arrival header h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 32px;
+  font-weight: 700;
+  color: #212529;
+}
+
+.best-seller {
+  padding: 64px 0;
+}
+.best-seller .container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.best-seller header {
+  height: 48px;
+  display: flex;
+  align-items: center;
+}
+.best-seller h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 32px;
+  font-weight: 700;
+  color: #212529;
 }/*# sourceMappingURL=all.css.map */
