--- a/style/_index.scss
+++ b/style/_index.scss
@@ -7,7 +7,7 @@
         object-fit: cover;
     }
     
-    & .hero-content{
+    .hero-content{
         max-width: 586px;
         position: absolute;
         inset: 0;
@@ -18,18 +18,18 @@
         align-items: flex-start;
         justify-content: center;
 
-        & h1{
+        h1{
             @include text-display1;
             font-weight: 700;
             color: #FFF;
         }
 
-        & h3{
+        h3{
             @include text-tw-h3;
             font-weight: 700;
             color: #FFF;
         }
-        & .bt-p-tx{
+        .bt-p-tx{
             margin-top: 40px;
         }
     }
@@ -79,5 +79,93 @@
         @include text-tw-h2;
         font-weight: 700;
         color: $color-n-9;
+    }
+}
+
+.collab-banner{
+    position: relative;
+    padding: $spacing-3xl 0;
+    img{
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+    }
+    .deco{
+        position: absolute;
+        pointer-events: none;
+    }
+    .deco-star{
+        max-width: 39px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-900%, -380%);
+    }
+    .deco-sparkle{
+        max-width: 76px;
+        top: 50%;
+        left: 50%;
+        transform: translate(345%, 50%);
+    }
+
+    .collab-content{
+        position: absolute;
+        inset: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: $spacing-3xl;
+
+        .collab-text{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: $spacing-xl;
+
+            header{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: $spacing-m;
+
+                .title{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: $spacing-l;
+                }
+            }
+        }
+
+        h2{
+            @include text-display2;
+            font-weight: 700;
+            color: #FFF;
+        }
+
+        h3{
+            @include text-tw-h2;
+            font-weight: 700;
+            color: #FFF;
+        }
+        .x{
+            @include text-tw-h1;
+            font-weight: 700;
+            color: $color-p-3;
+        }
+
+        h3{
+            @include text-tw-h3;
+            font-weight: 700;
+            color: #FFF;
+        }
+        
+        p{
+            @include text-tw-p-lg;
+            color: $color-n-5;
+            font-weight: 400;
+        }
     }
 }
