--- a/style/all.css
+++ b/style/all.css
@@ -725,4 +725,100 @@ main {
   font-size: 32px;
   font-weight: 700;
   color: #212529;
+}
+
+.collab-banner {
+  position: relative;
+  padding: 48px 0;
+}
+.collab-banner img {
+  width: 100%;
+  height: auto;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.collab-banner .deco {
+  position: absolute;
+  pointer-events: none;
+}
+.collab-banner .deco-star {
+  max-width: 39px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-900%, -380%);
+}
+.collab-banner .deco-sparkle {
+  max-width: 76px;
+  top: 50%;
+  left: 50%;
+  transform: translate(345%, 50%);
+}
+.collab-banner .collab-content {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+}
+.collab-banner .collab-content .collab-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+.collab-banner .collab-content .collab-text header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+.collab-banner .collab-content .collab-text header .title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.collab-banner .collab-content h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 48px;
+  font-weight: 700;
+  color: #FFF;
+}
+.collab-banner .collab-content h3 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 32px;
+  font-weight: 700;
+  color: #FFF;
+}
+.collab-banner .collab-content .x {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 40px;
+  font-weight: 700;
+  color: #C0FA73;
+}
+.collab-banner .collab-content h3 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 28px;
+  font-weight: 700;
+  color: #FFF;
+}
+.collab-banner .collab-content p {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 5%;
+  font-size: 20px;
+  color: #ADB5BD;
+  font-weight: 400;
 }/*# sourceMappingURL=all.css.map */
