--- a/style/_card.scss
+++ b/style/_card.scss
@@ -202,6 +202,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: $spacing-xs;
         z-index: 1;
         font-weight: 700;
         color: #FFF;
@@ -219,6 +220,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: $spacing-xs;
     width: 100%;
     background: $color-n-2;
     img {
