--- a/style/all.css
+++ b/style/all.css
@@ -325,6 +325,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 8px;
   z-index: 1;
   font-weight: 700;
   color: #FFF;
@@ -347,6 +348,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 8px;
   width: 100%;
   background: #E9ECEF;
 }
@@ -821,4 +823,25 @@ main {
   font-size: 20px;
   color: #ADB5BD;
   font-weight: 400;
+}
+
+.categories {
+  padding: 64px 0;
+}
+.categories .container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.categories header {
+  height: 48px;
+  display: flex;
+}
+.categories h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  line-height: 1.2;
+  letter-spacing: 5%;
+  font-size: 32px;
+  font-weight: 700;
+  color: #212529;
 }/*# sourceMappingURL=all.css.map */
