--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -16,11 +16,11 @@
         align-items: center;
         justify-content: space-between;
 
-        & a{
+        a{
             cursor: default;
             transition: color 0.8s ease;
         }
-        & .footer-list{
+        .footer-list{
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -31,11 +31,11 @@
             font-weight: 500;
             padding-top: $spacing-s;
             padding-bottom: $spacing-s;
-            & a{
+            a{
                 color: $color-n-9;
                 text-decoration: none;
             }
-            & a:hover{
+            a:hover{
                 color: $color-n-6;
             }
         }
