--- a/style/_grid.scss
+++ b/style/_grid.scss
@@ -12,11 +12,11 @@
   gap: 24px;
 }
 
-.col-12 { grid-column: span 12; }
-.col-6  { grid-column: span 6; }
-.col-4  { grid-column: span 4; }
-.col-3  { grid-column: span 3; }
-.col-2  { grid-column: span 2; }
+.col-12 { grid-column: span 12; grid-row: span 12; }
+.col-6  { grid-column: span 6; grid-row: span 6; }
+.col-4  { grid-column: span 4; grid-row: span 4; }
+.col-3  { grid-column: span 3; grid-row: span 3; }
+.col-2  { grid-column: span 2; grid-row: span 2; }
 
 
 html, body {
