--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -28,9 +28,9 @@
             height: 48px;
             gap: $spacing-2xl;
             @include text-tw-lb-md;
+            letter-spacing: 0.047em;
             font-weight: 500;
-            padding-top: $spacing-s;
-            padding-bottom: $spacing-s;
+            padding: $spacing-s 0;
             a{
                 color: $color-n-9;
                 text-decoration: none;
