--- a/style/_grid.scss
+++ b/style/_grid.scss
@@ -17,6 +17,9 @@
 .col-4  { grid-column: span 4; grid-row: span 4; }
 .col-3  { grid-column: span 3; grid-row: span 3; }
 .col-2  { grid-column: span 2; grid-row: span 2; }
+.col-7  { grid-column: span 7; }
+.col-5  { grid-column: span 5; }
+
 
 
 html, body {
