--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -1,12 +1,12 @@
 @mixin font-h{
     font-family: "Noto Sans TC", sans-serif;
     line-height: 1.2;
-    letter-spacing: 5%;
+    letter-spacing: 0.05em;
 }
 @mixin font-p{
     font-family: "Noto Sans TC", sans-serif;
     line-height: 1.5;
-    letter-spacing: 5%;
+    letter-spacing: 0.05em;
 }
 
 @mixin text-display1{
